Suppress display of PDF files via the Help menu on non-Windows platforms. Update the documentation. In particular, put back the installation instructions for Java 11 and make the body of UserGuide.html a maximum of 640px wide and centred horizontally. Revert to using a symbolic link for docs/UserGuide.html.